# fastapi-directory-routing

./: LICENSE  README.md  pyproject.toml  setup.py
docs/source/: conf.py  index.rst  usage.rst
fastapi_directory_routing/: __init__.py
fastapi_directory_routing/core/: __init__.py  directory_router.py
fastapi_easy_routing/: __init__.py
fastapi_easy_routing/core/: __init__.py  easy_routing.py
