[tool.poetry]
name = "fastapi-directory-routing"
version = "0.1.0"
description = ""
authors = ["Ebubekir Karanfil <karanfilebubekir@gmail.com>"]
readme = "README.md"
packages = [{include = "fastapi_directory_routing"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.101.0"
uvicorn = "^0.23.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
build = "^1.0.3"
twine = "^4.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
