[tool.poetry]
name = "fastapi-easy-routing"
version = "0.0.1"
description = ""
authors = ["Ebubekir Karanfil <karanfilebubekir@gmail.com>"]
readme = "README.md"
packages = [{include = "fastapi_directory_routing"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.1"
sphinx = "^7.2.6"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
build = "^1.0.3"
twine = "^4.0.2"
bumpver = "^2023.1126"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.bumpver]
current_version = "0.0.1"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
tag_message = "{new_version}"
tag_scope = "default"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
    'version = "{version}"'
]
"ebubekir-test-pypi/__version__.py" = ["{version}"]